tests/parse-fail/bad_module_ident2.fl.0.exp
Error: bad_module_ident2.fl(1,10): Expected identifier, but got '::' 
priv mod :: {
         ^    
}

